// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plural pair if needed works when both counts exist 1`] = `
<p
  class="plural-pair-if-needed"
>
  2 running tasks, 1 pending task
</p>
`;

exports[`plural pair if needed works when no counts exist 1`] = `null`;

exports[`plural pair if needed works when only first count exists 1`] = `
<p
  class="plural-pair-if-needed"
>
  2 running tasks
</p>
`;

exports[`plural pair if needed works when only second count exists 1`] = `
<p
  class="plural-pair-if-needed"
>
  1 pending task
</p>
`;
